// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create Room 1`] = `
Immutable.Map {
  username: "alex",
  room: Immutable.Map {
    id: "apple",
    chat: Immutable.List [
    ],
    users: Immutable.List [
    ],
  },
}
`;

exports[`Initial State 1`] = `
Immutable.Map {
}
`;

exports[`Set Username 1`] = `
Immutable.Map {
  username: "alex",
}
`;

exports[`User Joined Room 1`] = `
Immutable.Map {
  username: "alex",
  room: Immutable.Map {
    id: "apple",
    chat: Immutable.List [
    ],
    users: Immutable.List [
      "jake",
    ],
  },
}
`;
